--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,18 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-VPWebSolutions-F70FAECC-2FFD-408F-8607-0F25FBC201CA;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-VPWebSolutions-F70FAECC-2FFD-408F-8607-0F25FBC201CA;Trusted_Connection=True;MultipleActiveResultSets=true",
+    "DbConnection": "Data Source= (localdb)\\mssqllocaldb; Initial Catalog=PizzaBrosDB; Integrated Security=True; Connect Timeout=30;  MultipleActiveResultSets=true"
+  },
+  "ExternalProviders": {
+    "SendGrid": {
+      "ApiKey": "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",
+      "SenderEmail": "mvctutorialv2@outlook.com",
+      "SenderName": "NoReply"
+    },
+    "GoogleReCaptcha": {
+      "SiteKey": "6LfWLwodAAAAAM4geLlqDsGV5RhB6pPVb8QobaAC",
+      "SecretKey": "6LfWLwodAAAAAAO6BNIL5i5ZoiEjTvn9b2sOU0pz"
+    }
   },
   "Logging": {
     "LogLevel": {
