--- a/appsettings.json
+++ b/appsettings.json
@@ -1,7 +1,8 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-VPWebSolutions-F70FAECC-2FFD-408F-8607-0F25FBC201CA;Trusted_Connection=True;MultipleActiveResultSets=true",
-    "DbConnection": "Data Source= (localdb)\\mssqllocaldb; Initial Catalog=PizzaBrosDB; Integrated Security=True; Connect Timeout=30;  MultipleActiveResultSets=true"
+    "IdentityConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-IdentityExample-IdentityDataTrusted_Connection=True;MultipleActiveResultSets=true",
+    "DbConnection": "Data Source= (localdb)\\mssqllocaldb; Initial Catalog=PizzaBrosDB; Integrated Security=True; Connect Timeout=30;  MultipleActiveResultSets=true",
+    "BusinessConnection": "Data Source=(localdb)\\ProjectsV13;Database=aspnet-IdentityExample-BusinessData;Integrated Security=True;Connect Timeout=30;MultipleActiveResultSets=true"
   },
   "ExternalProviders": {
     "SendGrid": {
