Revert "Merge branch 'master' into Daniel"
This reverts commit 8e9762cad7eacf799f2ee1299d18ce59d9a1f6a6, reversing
changes made to 8d910f80956edd76fd9e48b28e0d9c48cbd61de2.

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,8 +1,7 @@
 {
   "ConnectionStrings": {
-    "IdentityConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-IdentityExample-IdentityDataTrusted_Connection=True;MultipleActiveResultSets=true",
-    "DbConnection": "Data Source= (localdb)\\mssqllocaldb; Initial Catalog=PizzaBrosDB; Integrated Security=True; Connect Timeout=30;  MultipleActiveResultSets=true",
-    "BusinessConnection": "Data Source=(localdb)\\ProjectsV13;Database=aspnet-IdentityExample-BusinessData;Integrated Security=True;Connect Timeout=30;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-VPWebSolutions-F70FAECC-2FFD-408F-8607-0F25FBC201CA;Trusted_Connection=True;MultipleActiveResultSets=true",
+    "DbConnection": "Data Source= (localdb)\\mssqllocaldb; Initial Catalog=PizzaBrosDB; Integrated Security=True; Connect Timeout=30;  MultipleActiveResultSets=true"
   },
   "ExternalProviders": {
     "SendGrid": {
