--- a/appsettings.json
+++ b/appsettings.json
@@ -1,8 +1,7 @@
 {
   "ConnectionStrings": {
-    "IdentityConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-IdentityExample-IdentityDataTrusted_Connection=True;MultipleActiveResultSets=true",
-    "DbConnection": "Data Source= (localdb)\\mssqllocaldb; Initial Catalog=PizzaBrosDB; Integrated Security=True; Connect Timeout=30;  MultipleActiveResultSets=true",
-    "BusinessConnection": "Data Source=(localdb)\\ProjectsV13;Database=aspnet-IdentityExample-BusinessData;Integrated Security=True;Connect Timeout=30;MultipleActiveResultSets=true"
+    "IdentityConnection": "Server=(localdb)\\mssqllocaldb;Database=PizzaBros-IdentityDB;Trusted_Connection=True;MultipleActiveResultSets=true",
+    "BusinessConnection": "Data Source=(localdb)\\ProjectsV13;Database=PizzaBrosDB-BusinessDB;Integrated Security=True;Connect Timeout=30;MultipleActiveResultSets=true"
   },
   "ExternalProviders": {
     "SendGrid": {
